# structural-mat

./: .gitignore  CMakeLists.txt  README.md
src/: MATOptimization.cpp  RobustMeshSimplification.cpp  RobustMeshSimplification.h  featureExtraction.h  main.cpp  medial_simplification.h
